--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
 *
 * ======================================================= */
 body {
-  font-family: "Garamond", Arial, sans-serif;
+  font-family: "Sofia", Arial, sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.7;
